# signate_scup2023

./: .gitignore  README.md  conda.yml  main.py  pyproject.toml
exp/: features.py
exp/models/: _lgbm.py  cat.py  keras.py  lgbm.py  lightgbm.py  lr.py  rf.py  rgf.py  xgb.py
exp/util/: kfoldTarget.py  timer.py
work/: eda.ipynb  model.ipynb  test.ipynb  test2.ipynb
