[tool.poetry]
name = "signate-scup2023"
version = "0.1.0"
description = ""
authors = ["tkser <tkser.edu@gmail.com>"]
readme = "README.md"
packages = [{include = "exp"}]

[tool.poetry.scripts]
start = "main:main"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.18.11"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
mojimoji = "^0.0.12"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
dataliner = "^1.3.1"
geopy = "^2.3.0"
catboost = "^1.2"
optuna = "^3.2.0"
lightgbm = "^4.0.0"
rgf-python = "^3.12.0"
xgboost = "^1.7.6"
ipykernel = "^6.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
